Bug 582138 - Crash [@ nsHTMLEditor::GetElementOrigin] with mixed HTML and MathML table; r,a=roc